# Computer-Science-Lessons-2021-2022

./: CMakeLists.txt  Makefile  README.md
01_stat/: 01_mystat.c  01_stat.c  CMakeLists.txt  README.md
02_write/: 02.1_write.c  02.2_dprintf.c  CMakeLists.txt  README.md
03_contentcopy/: 03*_extcopy.c  03.1_copy.c  03.2_pcopy.c  03.s_extcopy.c  CMakeLists.txt  README.md  copylib.c  copylib.h
03_contentcopy/copylib/: CMakeLists.txt  copylib.c  copylib.h
04_copyperm/: 04_copyperm.c
05_copyown/: 05_copyown.c
06_readdir/: 06.1_readdir.c  06.2_readdir_f.c  06.3_readdir_g.c  06.4_readdir_r.c
07_copydir/: 07.1_copydir.c  07.2_copydir_r.c  07_copydir_lib.h
09_statvfs/: 09.1_statvfs.c  README.md
1.1_mystat/: Makefile  mystat  mystat.c
10_fswatch/: 10.1_fswatch.c  10.1_fswatch_copy.c  fswatch
10_fswatch/libfswatch/: CMakeCache.txt  Makefile  cmake_install.cmake
10_fswatch/libfswatch/fswatch/src/: Makefile  cmake_install.cmake
10_fswatch/libfswatch/libfswatch/: Makefile  cmake_install.cmake  libfswatch_config.h
10_fswatch/libfswatch/test/src/: Makefile  cmake_install.cmake
11_flock/: 11.1_flock.c
12_processinfo/: 12.1_processinfo.c
13_wait/: 13.1_wait.c  13.2_ptrace.c  ptrace  wait
15_signals/: 15.1_sigaction.c  15.2_sigaction_fswatch.c
16_mqueue/: 16.0_mqueue.c  16.0_mqueue_osx.c
2.1_write/: 2.1_write  2.1_write.c  Makefile
2.2_dprintf/: Makefile  dprintf
3*_extcopy/: Makefile  copy.txt  example-softlink-copy  example.txt  extcopy
3.2_pcopy/: 3.2_pcopy.c  Makefile  example.txt  pcopy
Headers/: err_handle.h
(+2 files in other folders)
